--- a/app/views/issues/_issue_extensions_form.erb
+++ b/app/views/issues/_issue_extensions_form.erb
@@ -18,13 +18,33 @@
 -%>
 <%
 issue = @issue
-project = Project.find @issue.project_id.to_i
-parameters = request.parameters
-cb_subject = parameters[:cb_subject]
-cb_subject = "" unless cb_subject
-searched_issues = nil
-searched_issues = Issue.find(:all, :conditions => ["subject LIKE (?)", '%' + cb_subject + '%']) unless cb_subject == ""
-unless project.module_enabled? :issue_extensions == nil %>
+project = Project.find @issue.project_id
+unless project.module_enabled? :issue_extensions == nil
+  parameters = request.parameters
+  cb_subject = parameters[:cb_subject]
+  cb_subject = "" unless cb_subject
+  searched_issues = nil
+  searched_issues = Issue.find(:all, :conditions => ["project_id = ? AND subject LIKE (?)", @issue.project_id, '%' + cb_subject + '%']) unless cb_subject == ""
+  unless parameters[:relation_to] == nil || @issue.id == parameters[:relation_to].to_i
+    issue_from_id = @issue.id <=> parameters[:relation_to].to_i ? @issue.id : parameters[:relation_to].to_i
+    issue_to_id = @issue.id <=> parameters[:relation_to].to_i ? parameters[:relation_to].to_i : @issue.id
+    issue_from = Issue.find :first, :conditions =>["id = (?)", issue_from_id]
+    issue_to = Issue.find :first, :conditions =>["id = (?)", issue_to_id]
+    unless issue_from == nil || issue_to == nil || (issue_from.project_id != issue_to.project_id && Setting.cross_project_issue_relations?) || issue_from.is_descendant_of?(issue_to) || issue_from.is_ancestor_of?(issue_to)
+      relation = IssueRelation.find :first, :conditions => ["issue_from_id = ? AND issue_to_id = ?", issue_from_id, issue_to_id]
+      if relation == nil
+        begin
+          relation = IssueRelation.new
+          relation.relation_type = IssueRelation::TYPE_RELATES
+          relation.issue_from_id = issue_from_id
+          relation.issue_to_id = issue_to_id
+          relation.save!
+        rescue
+          # エラーハンドリングはしない(画面にエラー表示しない)
+        end
+      end
+    end
+  end %>
 <hr />
 <div id="issue_extensions_form">
   <p><strong><%= l(:issue_extensions) %></strong></p>
@@ -35,8 +55,10 @@ unless project.module_enabled? :issue_extensions == nil %>
     <% end %>
     <fieldset class="searched-issues" inner-droppableid="searched-issues"><legend><%= l(:label_searched_issues) %></legend>
       <ul id="ul_searched-issues" class="inner-droppable"><%
-  searched_issues.each do |searched_issue| %>
-        <li id="issue_<%= searched_issue.id %>" class="draggable"><div class="tooltip"><%= link_to_issue searched_issue %><span class="tip"><%= render_issue_tooltip searched_issue %></span></div></li><%
+  searched_issues.each do |searched_issue|
+    unless @issue.id == searched_issue.id %>
+        <li id="issue_<%= searched_issue.id %>" class="draggable"><div class="tooltip"><%= link_to_issue searched_issue %><span class="tip"><%= render_issue_tooltip searched_issue %></span><%= link_to l(:label_add_relation), {:controller => 'issues', :action => 'show', :id => @issue.id, :cb_subject => cb_subject, :relation_to => searched_issue.id}, :class => 'icon icon-edit' %></div></li><%
+    end
   end unless searched_issues == nil %>
       </ul>
     </fieldset>
